@@ -147,6 +147,8 @@ main (int argc, char **argv)
   vars["QHULL_CPPFLAGS"] = %OCTAVE_CONF_QHULL_CPPFLAGS%;
   vars["QHULL_LDFLAGS"] = %OCTAVE_CONF_QHULL_LDFLAGS%;
   vars["QHULL_LIBS"] = %OCTAVE_CONF_QHULL_LIBS%;
+  vars["QRUPDATE_CPPFLAGS"] = %OCTAVE_CONF_QRUPDATE_CPPFLAGS%;
+  vars["QRUPDATE_LDFLAGS"] = %OCTAVE_CONF_QRUPDATE_LDFLAGS%;
   vars["QRUPDATE_LIBS"] = %OCTAVE_CONF_QRUPDATE_LIBS%;
   vars["READLINE_LIBS"] = %OCTAVE_CONF_READLINE_LIBS%;
   vars["REGEX_LIBS"] = %OCTAVE_CONF_REGEX_LIBS%;
