@@ -99,6 +99,8 @@ PTHREAD_LIBS=%OCTAVE_CONF_PTHREAD_LIBS%
 QHULL_CPPFLAGS=%OCTAVE_CONF_QHULL_CPPFLAGS%
 QHULL_LDFLAGS=%OCTAVE_CONF_QHULL_LDFLAGS%
 QHULL_LIBS=%OCTAVE_CONF_QHULL_LIBS%
+QRUPDATE_CPPFLAGS=%OCTAVE_CONF_QRUPDATE_CPPFLAGS%
+QRUPDATE_LDFLAGS=%OCTAVE_CONF_QRUPDATE_LDFLAGS%
 QRUPDATE_LIBS=%OCTAVE_CONF_QRUPDATE_LIBS%
 READLINE_LIBS=%OCTAVE_CONF_READLINE_LIBS%
 REGEX_LIBS=%OCTAVE_CONF_REGEX_LIBS%
