@@ -413,6 +413,14 @@ along with Octave; see the file COPYING.  If not, see
 #define OCTAVE_CONF_QHULL_LIBS %OCTAVE_CONF_QHULL_LIBS%
 #endif
 
+#ifndef OCTAVE_CONF_QRUPDATE_CPPFLAGS
+#define OCTAVE_CONF_QRUPDATE_CPPFLAGS %OCTAVE_CONF_QRUPDATE_CPPFLAGS%
+#endif
+
+#ifndef OCTAVE_CONF_QRUPDATE_LDFLAGS
+#define OCTAVE_CONF_QRUPDATE_LDFLAGS %OCTAVE_CONF_QRUPDATE_LDFLAGS%
+#endif
+
 #ifndef OCTAVE_CONF_QRUPDATE_LIBS
 #define OCTAVE_CONF_QRUPDATE_LIBS %OCTAVE_CONF_QRUPDATE_LIBS%
 #endif
